# esp32-cmake-wifi-and-https

./: .gitignore  CMakeLists.txt  README  diagram.json  esp_wireguard.h.modified  sdkconfig  sdkconfig.old  wokwi.toml
components/rust-wifi_and_https2/: CMakeLists.txt  Cargo.toml  build.rs  idf_component.yml
components/rust-wifi_and_https2/include/: esp_idf_sys_wifi_and_https.h
components/rust-wifi_and_https2/src/: esp_wireguard_sys.rs  lib.rs
include/: hello_world.h
main/: main.c
src/: lib.rs
