[package]
name = "rust-wifi_and_https2"
version = "0.1.0"
authors = ["Tomasz Kłak <tomasz.klak@nordsec.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
crate-type = ["staticlib"]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false, features = ["alloc"] }
esp-idf-sys = { version = "0.34", default-features = false, features = ["alloc_handler", "panic_handler"]}

[build-dependencies]
embuild = "0.31"
