[package]
name = "rust-wifi_and_https2"
version = "0.1.0"
authors = ["Tomasz Kłak <tomasz.klak@nordsec.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
crate-type = ["staticlib"]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.34", default-features = false, features = ["panic_handler"]}
esp-println = { version = "0.10", default-features = false, features = ["esp32", "auto"] }

[build-dependencies]
embuild = "0.31"
